--- a/Alfred/Main.storyboard
+++ b/Alfred/Main.storyboard
@@ -24,7 +24,7 @@
                                 <rect key="frame" x="0.0" y="56" width="375" height="259"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8Zx-1t-l5x" id="GXR-M7-uPg">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="258"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="259"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="economics" translatesAutoresizingMaskIntoConstraints="NO" id="aaL-Ba-s8R">
@@ -81,44 +81,55 @@
         <scene sceneID="yPl-FQ-RAZ">
             <objects>
                 <tableViewController id="maw-ZC-hgc" customClass="DetailsTableViewController" customModule="Alfred" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="65" sectionHeaderHeight="18" sectionFooterHeight="18" id="kWF-HM-X10">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="138" sectionHeaderHeight="18" sectionFooterHeight="18" id="kWF-HM-X10">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <color key="sectionIndexColor" cocoaTouchSystemColor="darkTextColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="detailCell" id="sqr-GF-xmT" customClass="DetailTableViewCell" customModule="Alfred" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="56" width="375" height="65"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="detailCell" rowHeight="138" id="sqr-GF-xmT" customClass="DetailTableViewCell" customModule="Alfred" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="56" width="375" height="138"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sqr-GF-xmT" id="C4G-Rm-iGw">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="137"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yahoo finance" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jtZ-gi-n8j">
-                                            <rect key="frame" x="8" y="33.5" width="359" height="20.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kS4-I5-0Kn">
+                                            <rect key="frame" x="8" y="58" width="359" height="41"/>
+                                            <string key="text">Label jdfl jdsfl jksdlfmjksdlmfjk ldjkfl msdjkfmoeiu ohifirenyorhuhfieuhrliuhfr qfomd l ljd jlf kjsdlfkj slmdkj fsldkjf lmsdjkf lsmdjkf smldjkf sldfjk slmd jfksd</string>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Inflation rate : 3.5% ldfdljf dljflsdj lsdjf lsdjf lsdjkflmsdjk flsdjkf lmsdjksdljf lsdj jdf ljdsfl sdlfkjsd lfk" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMa-ij-p14">
+                                            <rect key="frame" x="8" y="8" width="359" height="42.5"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Yahoo finance" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jtZ-gi-n8j">
+                                            <rect key="frame" x="8" y="107" width="359" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inflation rate : 3.5%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMa-ij-p14">
-                                            <rect key="frame" x="8" y="8" width="359" height="20.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="jtZ-gi-n8j" firstAttribute="leading" secondItem="C4G-Rm-iGw" secondAttribute="leadingMargin" id="5NG-JY-xfg"/>
-                                        <constraint firstItem="bMa-ij-p14" firstAttribute="leading" secondItem="C4G-Rm-iGw" secondAttribute="leadingMargin" id="Gph-dc-BDi"/>
-                                        <constraint firstItem="bMa-ij-p14" firstAttribute="trailing" secondItem="C4G-Rm-iGw" secondAttribute="trailingMargin" id="K8c-lM-7Lh"/>
-                                        <constraint firstItem="jtZ-gi-n8j" firstAttribute="top" secondItem="bMa-ij-p14" secondAttribute="bottom" constant="5" id="N2a-ub-UcC"/>
-                                        <constraint firstItem="jtZ-gi-n8j" firstAttribute="trailing" secondItem="C4G-Rm-iGw" secondAttribute="trailingMargin" id="Ox9-ks-CEc"/>
-                                        <constraint firstItem="bMa-ij-p14" firstAttribute="top" secondItem="C4G-Rm-iGw" secondAttribute="topMargin" id="Wol-dm-iR6"/>
+                                        <constraint firstItem="bMa-ij-p14" firstAttribute="top" secondItem="C4G-Rm-iGw" secondAttribute="topMargin" id="9hN-ST-QyX"/>
+                                        <constraint firstItem="kS4-I5-0Kn" firstAttribute="trailing" secondItem="C4G-Rm-iGw" secondAttribute="trailingMargin" id="L8g-hn-LUg"/>
+                                        <constraint firstItem="jtZ-gi-n8j" firstAttribute="leading" secondItem="C4G-Rm-iGw" secondAttribute="leadingMargin" id="QEV-G2-Nby"/>
+                                        <constraint firstItem="kS4-I5-0Kn" firstAttribute="top" secondItem="bMa-ij-p14" secondAttribute="bottom" constant="8" id="RGq-EH-q1o"/>
+                                        <constraint firstItem="bMa-ij-p14" firstAttribute="leading" secondItem="C4G-Rm-iGw" secondAttribute="leadingMargin" id="UN7-XP-Jki"/>
+                                        <constraint firstItem="bMa-ij-p14" firstAttribute="trailing" secondItem="C4G-Rm-iGw" secondAttribute="trailingMargin" id="adF-PB-ufj"/>
+                                        <constraint firstItem="kS4-I5-0Kn" firstAttribute="leading" secondItem="C4G-Rm-iGw" secondAttribute="leadingMargin" id="rr6-Iy-aey"/>
+                                        <constraint firstItem="jtZ-gi-n8j" firstAttribute="trailing" secondItem="C4G-Rm-iGw" secondAttribute="trailingMargin" id="sep-ED-dwI"/>
+                                        <constraint firstItem="jtZ-gi-n8j" firstAttribute="top" secondItem="kS4-I5-0Kn" secondAttribute="bottom" constant="8" id="tlj-in-o3s"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="descript" destination="bMa-ij-p14" id="uEP-qZ-vCt"/>
-                                    <outlet property="source" destination="jtZ-gi-n8j" id="G4O-BJ-7EN"/>
+                                    <outlet property="descript" destination="kS4-I5-0Kn" id="52X-Ll-U3u"/>
+                                    <outlet property="source" destination="jtZ-gi-n8j" id="IDB-rg-Fgu"/>
+                                    <outlet property="title" destination="bMa-ij-p14" id="hcI-T6-S1d"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
