--- a/Alfred/Main.storyboard
+++ b/Alfred/Main.storyboard
@@ -91,11 +91,11 @@
                                 <rect key="frame" x="0.0" y="56" width="375" height="138"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sqr-GF-xmT" id="C4G-Rm-iGw">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="137"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="138"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kS4-I5-0Kn">
-                                            <rect key="frame" x="8" y="58" width="359" height="41"/>
+                                            <rect key="frame" x="8" y="58" width="359" height="43"/>
                                             <string key="text">Label jdfl jdsfl jksdlfmjksdlmfjk ldjkfl msdjkfmoeiu ohifirenyorhuhfieuhrliuhfr qfomd l ljd jlf kjsdlfkj slmdkj fsldkjf lmsdjkf lsmdjkf smldjkf sldfjk slmd jfksd</string>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -108,7 +108,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Yahoo finance" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jtZ-gi-n8j">
-                                            <rect key="frame" x="8" y="107" width="359" height="20.5"/>
+                                            <rect key="frame" x="8" y="109" width="359" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
@@ -124,6 +124,7 @@
                                         <constraint firstItem="kS4-I5-0Kn" firstAttribute="leading" secondItem="C4G-Rm-iGw" secondAttribute="leadingMargin" id="rr6-Iy-aey"/>
                                         <constraint firstItem="jtZ-gi-n8j" firstAttribute="trailing" secondItem="C4G-Rm-iGw" secondAttribute="trailingMargin" id="sep-ED-dwI"/>
                                         <constraint firstItem="jtZ-gi-n8j" firstAttribute="top" secondItem="kS4-I5-0Kn" secondAttribute="bottom" constant="8" id="tlj-in-o3s"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="jtZ-gi-n8j" secondAttribute="bottom" id="xEA-Ci-38v"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
