--- a/Alfred/Main.storyboard
+++ b/Alfred/Main.storyboard
@@ -81,50 +81,49 @@
         <scene sceneID="yPl-FQ-RAZ">
             <objects>
                 <tableViewController id="maw-ZC-hgc" customClass="DetailsTableViewController" customModule="Alfred" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="138" sectionHeaderHeight="18" sectionFooterHeight="18" id="kWF-HM-X10">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="166" sectionHeaderHeight="18" sectionFooterHeight="18" id="kWF-HM-X10">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <color key="sectionIndexColor" cocoaTouchSystemColor="darkTextColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="detailCell" rowHeight="138" id="sqr-GF-xmT" customClass="DetailTableViewCell" customModule="Alfred" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="56" width="375" height="138"/>
+                            <tableViewCell autoresizesSubviews="NO" contentMode="scaleAspectFit" selectionStyle="default" indentationWidth="10" reuseIdentifier="detailCell" rowHeight="166" id="sqr-GF-xmT" customClass="DetailTableViewCell" customModule="Alfred" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="56" width="375" height="166"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sqr-GF-xmT" id="C4G-Rm-iGw">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="138"/>
+                                <tableViewCellContentView key="contentView" autoresizesSubviews="NO" opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" tableViewCell="sqr-GF-xmT" id="C4G-Rm-iGw">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="165"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kS4-I5-0Kn">
-                                            <rect key="frame" x="8" y="58" width="359" height="43"/>
-                                            <string key="text">Label jdfl jdsfl jksdlfmjksdlmfjk ldjkfl msdjkfmoeiu ohifirenyorhuhfieuhrliuhfr qfomd l ljd jlf kjsdlfkj slmdkj fsldkjf lmsdjkf lsmdjkf smldjkf sldfjk slmd jfksd</string>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Inflation rate : 3.5% ldfdljf dljflsdj lsdjf lsdjf lsdjkflmsdjk flsdjkf lmsdjksdljf lsdj jdf ljdsfl sdlfkjsd lfk" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMa-ij-p14">
-                                            <rect key="frame" x="8" y="8" width="359" height="42.5"/>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Yahoo finance" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jtZ-gi-n8j">
-                                            <rect key="frame" x="8" y="109" width="359" height="20.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="Wmq-V0-nel">
+                                            <rect key="frame" x="8" y="8" width="359" height="149.5"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Inflation rate : 3.5% ldfdljf dljflsdj lsdjf lsdjf lsdjkflmsdjk flsdjkf lmsdjksdljf lsdj jdf ljdsfl sdlfkjsd lfk" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMa-ij-p14">
+                                                    <rect key="frame" x="0.0" y="0.0" width="359" height="64.5"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kS4-I5-0Kn">
+                                                    <rect key="frame" x="0.0" y="64.5" width="359" height="81.5"/>
+                                                    <string key="text">Label jdfl jdsfl jksdlfmjksdlmfjk ldjkfl msdjkfmoeiu ohifirenyorhuhfieuhrliuhfr qfomd l ljd jlf kjsdlfkj slmdkj fsldkjf lmsdjkf lsmdjkf smldjkf sldfjk slmd jfksd</string>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="749" text="Yahoo finance" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jtZ-gi-n8j">
+                                                    <rect key="frame" x="0.0" y="146" width="359" height="3.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="bMa-ij-p14" firstAttribute="top" secondItem="C4G-Rm-iGw" secondAttribute="topMargin" id="9hN-ST-QyX"/>
-                                        <constraint firstItem="kS4-I5-0Kn" firstAttribute="trailing" secondItem="C4G-Rm-iGw" secondAttribute="trailingMargin" id="L8g-hn-LUg"/>
-                                        <constraint firstItem="jtZ-gi-n8j" firstAttribute="leading" secondItem="C4G-Rm-iGw" secondAttribute="leadingMargin" id="QEV-G2-Nby"/>
-                                        <constraint firstItem="kS4-I5-0Kn" firstAttribute="top" secondItem="bMa-ij-p14" secondAttribute="bottom" constant="8" id="RGq-EH-q1o"/>
-                                        <constraint firstItem="bMa-ij-p14" firstAttribute="leading" secondItem="C4G-Rm-iGw" secondAttribute="leadingMargin" id="UN7-XP-Jki"/>
-                                        <constraint firstItem="bMa-ij-p14" firstAttribute="trailing" secondItem="C4G-Rm-iGw" secondAttribute="trailingMargin" id="adF-PB-ufj"/>
-                                        <constraint firstItem="kS4-I5-0Kn" firstAttribute="leading" secondItem="C4G-Rm-iGw" secondAttribute="leadingMargin" id="rr6-Iy-aey"/>
-                                        <constraint firstItem="jtZ-gi-n8j" firstAttribute="trailing" secondItem="C4G-Rm-iGw" secondAttribute="trailingMargin" id="sep-ED-dwI"/>
-                                        <constraint firstItem="jtZ-gi-n8j" firstAttribute="top" secondItem="kS4-I5-0Kn" secondAttribute="bottom" constant="8" id="tlj-in-o3s"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="jtZ-gi-n8j" secondAttribute="bottom" id="xEA-Ci-38v"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Wmq-V0-nel" secondAttribute="trailing" id="TGs-yO-tZk"/>
+                                        <constraint firstItem="Wmq-V0-nel" firstAttribute="top" secondItem="C4G-Rm-iGw" secondAttribute="topMargin" id="h96-VF-VqA"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Wmq-V0-nel" secondAttribute="bottom" id="hHE-ZL-heF"/>
+                                        <constraint firstItem="Wmq-V0-nel" firstAttribute="leading" secondItem="C4G-Rm-iGw" secondAttribute="leadingMargin" id="o9H-Ne-Pa3"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
